<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_home_search"
        android:backgroundTint="#F2F2F2"
        android:gravity="center_vertical"
        android:translationZ="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/cd_search"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_search" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_search"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_settings"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_settings" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="4dp"
        android:paddingTop="50dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_view"
        tools:itemCount="30"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/item_home"
        tools:spanCount="2" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_task"
        app:elevation="0dp"
        app:hoveredFocusedTranslationZ="0dp"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ExtendedFloatingActionButton" />

</androidx.constraintlayout.motion.widget.MotionLayout>