<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_corner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/corner_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/lbl_corner_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lbl_corner_type" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tg_corner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_corner_type"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_corner_round"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/corner_type_round"
            app:icon="@drawable/ic_corner_round" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_corner_cut"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/corner_type_cut"
            app:icon="@drawable/ic_corner_cut" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_corner_square"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/corner_type_square"
            app:icon="@drawable/ic_corner_square" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/lbl_corner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/corner_size"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tg_corner" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_corner_size">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="1.0"
                android:valueFrom="8.0"
                android:valueTo="32.0"
                tools:text="Corner size" />

            <TextView
                android:id="@+id/txt_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minEms="2"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="32dp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/lbl_corner_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/border_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_slider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_corner_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_color"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_color"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.CornerSize50Percent"
                tools:background="@color/black" />

            <TextView
                android:id="@+id/txt_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                app:layout_constraintEnd_toStartOf="@id/img_drop_down"
                app:layout_constraintStart_toEndOf="@id/img_color"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="#02AF22" />

            <ImageView
                android:id="@+id/img_drop_down"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_color"
                app:srcCompat="@drawable/ic_arrow_down" />

            <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
                android:id="@+id/color_brightness_slide"
                android:layout_width="180dp"
                android:layout_height="24dp"
                android:rotation="90"
                android:visibility="gone"
                app:borderColor_BrightnessSlider="@color/white"
                app:borderSize_BrightnessSlider="0"
                app:layout_constraintBottom_toBottomOf="@id/color_picker"
                app:layout_constraintEnd_toStartOf="@id/color_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/color_picker"
                app:selector_BrightnessSlider="@drawable/wheel" />

            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/color_picker"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:visibility="gone"
                app:alpha_flag="0.5"
                app:alpha_selector="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_color" />

            <com.skydoves.colorpickerview.sliders.AlphaSlideBar
                android:id="@+id/color_alpha_slide"
                android:layout_width="180dp"
                android:layout_height="24dp"
                android:rotation="90"
                android:visibility="gone"
                app:borderColor_AlphaSlideBar="@color/white"
                app:borderSize_AlphaSlideBar="0"
                app:layout_constraintBottom_toBottomOf="@id/color_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/color_picker"
                app:layout_constraintTop_toTopOf="@id/color_picker"
                app:selector_AlphaSlideBar="@drawable/wheel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_preview"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>